deploy/k8s/overlays/minikube/gateway-service/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: production
spec:
  selector:
    matchLabels:
      app: gateway-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    spec:
      containers:
        - name: gateway-service
          resources:
            limits:
              memory: "1Gi"
              cpu: "0.5"
            requests:
              memory: "150Mi"
              cpu: "100m"
