deploy/k8s/overlays/minikube/gateway-service/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-service-ingress
  namespace: production
spec:
  tls:
    - hosts:
        - api.books.com
      secretName: gateway-service-tls
